--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    background-color: blanchedalmond;
+    background-color: rgb(250, 242, 242);
 }
 .navbar {
     background-color: rgb(191, 191, 204);
@@ -14,9 +14,10 @@ body {
     position: relative;
 }
 .note {
-    width: 150px;
-    height: 150px;
+    width: 200px;
+    height: 200px;
     background-color: yellow;
+    background-repeat: no-repeat;
     margin: 10px;
     padding: 10px;
     position: absolute;
